<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OpenXC Enabler</string>
    <string name="status_label">Status</string>
    <string name="active_connections">Active Connections:</string>
    <string name="recording_status_label">Recording Status: </string>
    <string name="message_count_label">Messages Received: </string>
    <string name="connection_unknown">Unknown</string>
    <string name="connection_file">File</string>
    <string name="connection_bluetooth">Bluetooth</string>
    <string name="connection_usb">USB</string>
    <string name="connection_network">Network</string>
    <string name="connection_none">None</string>
    <string name="show_data_button">View Vehicle Data</string>

    <string name="settings">Settings</string>
    <string name="recording_preferences">Recording</string>
    <string name="data_source_preferences">Data Sources</string>
    <string name="about_preferences">About</string>
    <string name="gps_settings">GPS</string>
    <string name="output_preferences">Output</string>
    <string name="bluetooth_settings">Bluetooth</string>
    <string name="recording_checkbox_title">Record Trace</string>
    <string name="recording_checkbox_summary">Record the vehicle data stream to a file</string>
    <string name="recording_directory_title">Output Directory</string>
    <string name="recording_directory_summary">Save recorded traces in this directory</string>
    <string name="uploading_checkbox_title">Upload Trace</string>
    <string name="uploading_checkbox_summary">Upload the vehicle data stream to a remote web server</string>
    <string name="uploading_path_title">Target URL</string>
    <string name="uploading_path_summary">Send trace data to this URL</string>
    <string name="native_gps_checkbox_title">Use built-in GPS</string>
    <string name="native_gps_checkbox_summary">For vehicles without a GPS receiver, send the host\'s built-in GPS location instead</string>
    <string name="gps_overwrite_checkbox_title">Overwrite Native GPS</string>
    <string name="gps_overwrite_checkbox_summary">Overwrite Android native GPS values with those from the vehicle (if available)</string>
    <string name="bluetooth_checkbox_title">Use a Bluetooth vehicle interface</string>
    <string name="bluetooth_checkbox_summary">Read vehicle data from a vehicle interface connected wirelessly via Bluetooth</string>
    <string name="bluetooth_mac_title">Bluetooth Device</string>
    <string name="network_settings">Network</string>
    <string name="network_checkbox_title">Use a network device</string>
    <string name="network_checkbox_summary">Read vehicle data from the network</string>
    <string name="network_host_title">Network host address</string>
    <string name="network_port_title">Network port</string>
    <string name="trace_source_settings">Trace file playback</string>
    <string name="trace_source_checkbox_title">Use a pre-recorded trace file</string>
    <string name="trace_source_checkbox_summary">Use an OpenXC vehicle data trace file as the source</string>
    <string name="trace_source_file_title">Select a trace file for playback</string>
    <string name="trace_source_file_summary">Select an existing trace file</string>
    <string name="source_list_label">Data Sources</string>
    <string name="sink_list_label">Data Sinks</string>
    <string name="about_summary">About OpenXCEnabler</string>
    <string name="application_version_title">Version</string>
    <string name="application_version_summary">Version Number</string>
    <string name="application_version_key">application_version</string>
    <string name="service_not_running">VehicleService not running.</string>
    <string name="warning">Warning</string>

    <!-- Vehicle Dashboard Strings -->
    <string name="steering_wheel_angle_label">Steering Wheel</string>
    <string name="vehicle_speed_label">Vehicle Speed</string>
    <string name="fuel_consumed_label">Fuel Consumed</string>
    <string name="fuel_level_label">Fuel Level</string>
    <string name="odometer_label">Odometer</string>
    <string name="wiper_status_label">Windshield Wiper</string>
    <string name="brake_pedal_status_label">Brake Pedal</string>
    <string name="headlamp_status_label">Headlamp</string>
    <string name="engine_speed_label">Engine Speed</string>
    <string name="torque_at_transmission_label">Transmission Torque</string>
    <string name="accelerator_pedal_position_label">
        Accelerator Pedal
    </string>
    <string name="transmission_gear_pos_label">
        Transmission Gear
    </string>
    <string name="ignition_label">Ignition Status</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="android_latitude_label">Android Latitude</string>
    <string name="android_longitude_label">Android Longitude</string>
    <string name="parking_brake_status_label">Parking Brake</string>
    <string name="button_event_label">Button Event</string>
    <string name="door_status_label">Door Status</string>
    <string name="left_turn">Left Turn</string>
    <string name="right_turn">Right Turn</string>

    <!-- Crittercism Dialog-->
    <string name="crittercism_dialog_title">Crittercism library</string>
    <string name="crittercism_dialog_message">This application can use Crittercism library to collect crash logs.
        This will help us to improve application. Would You like to enable it?</string>

    <!-- This is a copy from openxc library as IDEA could not compile project when resources are set at library -->
    <string name="native_gps_checkbox_key">use_native_gps</string>
    <string name="gps_overwrite_checkbox_key">overwrite_native_gps</string>
    <string name="recording_checkbox_key">recording_enabled</string>
    <string name="recording_directory_key">recording_output</string>
    <string name="uploading_checkbox_key">uploading_enabled</string>
    <string name="uploading_path_key">uploading_target</string>
    <string name="bluetooth_checkbox_key">bluetooth_checkbox</string>
    <string name="bluetooth_mac_key">bluetooth_mac</string>
    <string name="network_checkbox_key">network_checkbox</string>
    <string name="network_host_key">network_host</string>
    <string name="network_port_key">network_port</string>
    <string name="trace_source_checkbox_key">playback_trace_enabled</string>
    <string name="trace_source_file_key">playback_trace_file</string>

</resources>
