<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
            android:key="@string/recording_checkbox_key"
            android:title="@string/recording_checkbox_title"
            android:summary="@string/recording_checkbox_summary"
            android:defaultValue="false" />

    <EditTextPreference
            android:key="@string/recording_path_key"
            android:title="@string/recording_path_title"
            android:summary="@string/recording_path_summary"
            android:defaultValue="/openxcdata/data" />

    <CheckBoxPreference
            android:key="@string/uploading_checkbox_key"
            android:title="@string/uploading_checkbox_title"
            android:summary="@string/uploading_checkbox_summary"
            android:defaultValue="false" />

    <EditTextPreference
            android:key="@string/uploading_path_key"
            android:title="@string/uploading_path_title"
            android:summary="@string/uploading_path_summary"
            android:inputType="textUri" />

</PreferenceScreen>
