<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/EnablerFragment">

    <TextView
        android:id="@+id/service_not_running_bar"
        style="@style/WarningText"
        android:drawableLeft="@drawable/warning"
        android:text="@string/service_not_running" >

    </TextView>

    <LinearLayout
            style="@style/ItemRow">

        <TextView
            style="@style/ItemLabel"
            android:text="@string/active_connections" />

        <LinearLayout
            android:id="@+id/connection_status"
            style="@style/ItemData"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/connection_file"
                style="@style/ItemDataImage"
                android:contentDescription="@string/connection_file"
                android:src="@drawable/play_from_file_white" />

            <ImageView
                android:id="@+id/connection_bluetooth"
                style="@style/ItemDataImage"
                android:contentDescription="@string/connection_bluetooth"
                android:src="@drawable/bluetooth_white" />

            <ImageView
                android:id="@+id/connection_network"
                style="@style/ItemDataImage"
                android:contentDescription="@string/connection_network"
                android:src="@drawable/network_white" />

            <ImageView
                android:id="@+id/connection_usb"
                style="@style/ItemDataImage"
                android:contentDescription="@string/connection_usb"
                android:src="@drawable/usb_white" />

            <TextView
                android:id="@+id/connection_none"
                style="@style/ItemDataRedBold"
                android:text="@string/connection_none" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/ItemRow" >

        <TextView
            style="@style/ItemLabel"
            android:text="@string/message_count_label" />

        <TextView
            android:id="@+id/message_count"
            style="@style/ItemData" />
    </LinearLayout>

    <Button
        android:id="@+id/start_bluetooth_search_btn"
        style="@style/MinimalButton"
        android:text="@string/bluetooth_search_button" />

</LinearLayout>
