<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5sp"
    android:paddingRight="5sp"
    android:orientation="vertical">
    
    <LinearLayout 
	    android:id="@+id/service_not_running_bar"
	    style="@style/WarningBar">
	    <ImageView 
	        style="@style/WarningImage"
	        android:contentDescription="@string/warning"
	        android:src="@drawable/warning"/>
	    <TextView
	        style="@style/WarningText"
	        android:text="@string/service_not_running"/>
	</LinearLayout>
    
    <TextView 
        style="@style/SectionHeader"
        android:layout_marginTop="0sp"
        android:text="@string/status_label"/> 
    <LinearLayout
        style="@style/ItemRow" >

        <TextView 
            style="@style/ItemLabel"
            android:text="@string/message_count_label"/>
        <TextView
            android:id="@+id/message_count"
            style="@style/ItemData"/>
    </LinearLayout>
    
    <LinearLayout 
        style="@style/VerticallyStackedScroller">        
	    <TextView 
	        style="@style/SectionHeader"
	        android:text="@string/source_list_label"/>
	    <ListView 
	        android:id="@+id/source_list" 
	        style="@style/DefaultFont" />
    </LinearLayout>
    <LinearLayout 
        style="@style/VerticallyStackedScroller"> 
	    <TextView 
	       	style="@style/SectionHeader"
	        android:text="@string/sink_list_label" />
	    <ListView 
	        android:id="@+id/sink_list" 
	        style="@style/DefaultFont" />  
	</LinearLayout>  
</LinearLayout>
